feat(storage): Add domain state aggregation
Introduce a new storage mechanism to track domain-specific analytics, including first/last seen timestamps and total visit counts. This enhances the application's ability to provide aggregated insights beyond individual events.

The service worker is updated to coordinate event storage with domain state updates. The UI now includes state for domain visits. Manifest is updated for module type service worker.

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
     "<all_urls>"
   ],
   "background": {
-    "service_worker": "service_worker.js"
+    "service_worker": "service_worker.js",
+    "type": "module"
   },
   "action": {
     "default_popup": "index.html",
