--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@google/genai": "^1.34.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.2.0"
+    "vite": "^5.4.21"
   }
 }
