feat: Add SAML detection and privacy mode
Introduce support for detecting SAML authentication flows and a new strict privacy mode. This includes:

- **SAML Detection:** Added a content script to detect SAML forms on web pages and emit a `DOM_SAML` signal. The classifier job now recognizes this signal for improved activity analysis.
- **Privacy Modes:** Implemented a `privacyMode` setting with a default `STRICT` option. This influences how data is collected and processed.
- **Manifest Update:** Registered the new SAML content script in the `manifest.json`.
- **Service Worker & Classifier Updates:** Modified `service_worker.js` and `jobs/classifier_job.js` to integrate SAML detection and prepare for privacy mode logic.
- **UI Enhancements:** Updated `src/main.tsx` to include the `privacyMode` in app settings and `ui/view_models.js` to refine domain surfacing logic by removing legacy fallbacks.
- **Signal Codes:** Added `DOM_SAML` to `signals/signal_codes.js`.
- **Defaults:** Added `SETTINGS_KEY` and `DEFAULT_SETTINGS` to `storage/defaults.js`.
- **Version Increment:** Updated `manifest.json` to version 0.5.0.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
+
 {
   "manifest_version": 3,
   "name": "Personal Digital Trace Manager",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Local-first digital footprint manager. Collects domain visits locally.",
   "permissions": [
     "storage",
@@ -23,6 +24,12 @@
       "matches": ["<all_urls>"],
       "js": ["content/content_probe.js"],
       "run_at": "document_idle"
+    },
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content/saml_detector.js"],
+      "run_at": "document_idle",
+      "all_frames": false
     }
   ]
 }
